--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     
     .button{
 			text-decoration: none;
-			text-transform: uppercase;
-			font-family: Georgia, serif;
+/* 			text-transform: uppercase; */
+			font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 			padding: 20px;
 			border: 1px solid grey;
 			border-radius: 7px;
@@ -62,6 +62,7 @@
   </div>
   
 	<div id="iFrameWrapper">
+<!-- 
 			<?php
 		$a = rand(1,114);
 		$lens = [7,286,200,176,120,165,206,75,129,109,123,111,43,52,99,128,111,110,98,135,
@@ -74,6 +75,10 @@
 // 	echo "a: $a     b:$b";
 				echo "<iframe id=\"my-iframe\" src=\"https://www.quran.com/$a/$b\" frameborder=\"0\" scrolling=\"yes\"></iframe>";
 	?>
+ -->
+ 
+ <iframe id="my-iframe" src="https://www.quran.com/13/24" frameborder="0" scrolling="yes"></iframe>
+ 
 </div>
   </body>
 </html>
