--- a/index.html
+++ b/index.html
@@ -10,103 +10,11 @@
     <link href="../FbQ/FB_logo_1024.png" sizes="114x114" rel="apple-touch-icon-precomposed">
     <link href="../FbQ/FB_logo_1024.png" sizes="57x57" rel="apple-touch-icon-precomposed">
 
+    <link rel="stylesheet" type="text/css" href="./styling.css">
+
 
     <style>
 
-    html, body{
-    	height: 100%;
-      margin: 0;
-    }
-
-    #quran-iframe{
-      position:relative;
-      top:0px;
-      left:0;
-      width:100%;
-      height:90%;
-    }
-
-    #button-wrapper{
-    	width: 100%;
-    	display:flex;
-			justify-content: space-around;
-			padding: 20px 0px;
-    }
-
-    #iFrameWrapper{
-			/* position: absolute;
-			top:30px;
-			left: 0; */
-			width: 100%;
-			height: 100%;
-    }
-
-    .button{
-			text-decoration: none;
-/* 			text-transform: uppercase; */
-			font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-			padding: 13px;
-			border: 1px solid grey;
-			border-radius: 7px;
-			text-align: center;
-			margin: 5px;
-			display: flex;
-			align-items:center;
-			background: #f8f8f8;
-		}
-
-		@media (min-width: 992px){
-		 .button{
-				padding: 10px;
-				margin: 8px;
-			}
-		}
-
-    @media (prefers-color-scheme: dark) {
-
-      html, body{
-      	height: 100%;
-        background-color: #faf3f2;
-
-      }
-
-      #button-wrapper{
-        background-color: #0e1b1e;
-      }
-
-      .button{
-        border: 1px solid rgb(233, 233, 233);
-        background: rgb(15, 25, 31);
-      }
-
-      a{
-          text-decoration: underline;
-      }
-
-      a:link {
-        color: white;
-      }
-
-      /* visited link */
-      a:visited {
-        color: white;
-      }
-
-      /* mouse over link */
-      a:hover {
-        color: rgb(224, 224, 224);
-      }
-
-      /* selected link */
-      a:active {
-        color: rgb(202, 202, 202);
-      }
-
-      #iFrameWrapper{
-  			mix-blend-mode: difference;
-      }
-
-    }
 
     </style>
 
